# funspace

./: .gitignore  .gitmodules  Cargo.toml  README.md
benches/: benchmark_chebyshev.rs  benchmark_fourier.rs  benchmark_spacebase.rs
examples/: field.rs  space2.rs  space_complex_mpi.rs  space_mpi.rs
src/: complex_to_complex.rs  enums.rs  impl_differentiate.rs  impl_from_ortho.rs  impl_transform.rs  internal_macros.rs  lib.rs  macros.rs  main.rs  real_to_complex.rs  real_to_real.rs  space.rs  space1.rs  space2.rs  space3.rs  space_common.rs  space_traits.rs  test_utils.rs  traits.rs  types.rs  utils.rs
src/chebyshev/: compo.rs  composite.rs  composite_stencil.rs  dmsuite.rs  linalg.rs  mod.rs  ortho.rs  stencils.rs
src/chebyshev/linalg/: pdma.rs  pdma2.rs  tdma.rs
src/chebyshev/stencils/: helper.rs  helpers.rs  mod.rs  traits.rs
src/fourier/: c2c.rs  complex.rs  mod.rs  r2c.rs
src/mpi/: decomp_handler.rs  mod.rs  space2.rs  space_traits.rs
src/old/: enums.rs  lib.rs  macros.rs  main.rs  space_traits.rs  traits.rs  types.rs  utils.rs
src/old/chebyshev/: composite.rs  linalg.rs  mod.rs
src/space/: mod.rs  space1.rs  space2.rs  space3.rs  traits.rs
src/space_mpi/: decomp_handler.rs  mod.rs  space2.rs  space2_mpi.rs  space2_new.rs  traits.rs
src/space_mpi/old_unused/decomp2d/: mod.rs
src/space_mpi/space2_mpi/: impl_serial.rs
src/spaces/: mod.rs  space1.rs  space2.rs  space3.rs  traits.rs
src/spaces_mpi/: decomp_handler.rs  mod.rs  space2.rs  traits.rs
src/spaces_mpi/decomp2d/: distribute.rs  functions.rs
