[package]
name = "funspace"
version = "0.3.0"
authors = ["preiter"]
edition = "2018"
description = "N-dimensional function spaces and transforms"
repository = "https://github.com/preiter93/funspace"
keywords = ["scientific", "numerical", "fourier", "chebyshev", "ndarray"]
readme = "README.md"
license = "MIT"

[dependencies]
num-traits = "0.2"
num-complex = "0.4"
rustdct = "0.7"
ndarray = "0.15"
enum_dispatch = "0.3"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

#[lib]
#name = "funspace"
#path = "src/lib.rs"

#[[bench]]
#name = "benchmark_chebyshev"
#harness = false

#[[bench]]
#name = "benchmark_fourier"
#harness = false

# Enable katex in documentation
# RUSTDOCFLAGS="--html-in-header docs-header.html" cargo doc --no-deps --open
[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "docs-header.html" ]
