[package]
name = "funspace"
version = "0.4.0"
authors = ["preiter"]
edition = "2018"
description = "N-dimensional function spaces and transforms"
repository = "https://github.com/preiter93/funspace"
keywords = ["scientific", "numerical", "fourier", "chebyshev", "ndarray"]
readme = "README.md"
license = "MIT"

[dependencies]
num-traits = "0.2"
num-complex = "0.4"
ndarray = { version = "0.15", features = ["rayon"] }
enum_dispatch = "0.3"
rustfft = "6.0"
rustdct = "0.7"
realfft = "3.0"
mpi_crate = {package="mpi-fork-fnsp", version = "0.6", optional = true}

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "benchmark_chebyshev"
harness = false

[[bench]]
name = "benchmark_fourier"
harness = false

[features]
mpi = ["mpi_crate"]
mpi-derive = ["mpi_crate"]

# Enable katex in documentation
# RUSTDOCFLAGS="--html-in-header docs-header.html" cargo doc --no-deps --open
[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "docs-header.html" ]
